tests/spec/format/snapshots/return_simple.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { return 42 }"
---
fn test() {
  return 42
}
