tests/spec/format/snapshots/return_unit.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { return }"
---
fn test() {
  return
}
