tests/spec/format/snapshots/select_match_receive.snap
---
source: tests/spec/format/mod.rs
description: |-
  fn test() {
    select {
      match ch.receive() {
        Some(v) => process(v),
        None => handle_close(),
      },
      _ => default(),
    }
  }
---
fn test() {
  select {
    match ch.receive() {
      Some(v) => process(v),
      None => handle_close(),
    },
    _ => default(),
  }
}
