tests/spec/format/snapshots/select_match_receive_multiline_arms.snap
---
source: tests/spec/format/mod.rs
description: |-
  fn test() {
    select {
      match ch.receive() {
        Some(msg) => {
          log(msg);
          process(msg);
        },
        None => cleanup(),
      },
      _ => {},
    }
  }
---
fn test() {
  select {
    match ch.receive() {
      Some(msg) => {
        log(msg)
        process(msg)
      },
      None => cleanup(),
    },
    _ => {},
  }
}
