tests/spec/format/snapshots/select_send.snap
---
source: tests/spec/format/mod.rs
description: |-
  fn test() {
    select {
      tx.Send(42) => done(),
      _ => timeout(),
    }
  }
---
fn test() {
  select {
    tx.Send(42) => done(),
    _ => timeout(),
  }
}
