tests/spec/format/snapshots/select_simple.snap
---
source: tests/spec/format/mod.rs
description: |-
  fn test() {
      select {
          let x = rx.Receive() => handle(x),
          _ => default(),
      }
  }
---
fn test() {
  select {
    let x = rx.Receive() => handle(x),
    _ => default(),
  }
}
