tests/spec/format/snapshots/shebang_above_a_file_comment.snap
---
source: tests/spec/format/mod.rs
description: "#!/usr/bin/env -S lis run\n//! A tool.\n\nimport \"go:fmt\"\n\nfn main() {\n  fmt.Println(1)\n}"
---
#!/usr/bin/env -S lis run

//! A tool.

import "go:fmt"

fn main() {
  fmt.Println(1)
}
