tests/spec/format/snapshots/shebang_gains_a_blank_line_below.snap
---
source: tests/spec/format/mod.rs
description: "#!/usr/bin/env -S lis run\nfn main() {\n  let _ = 1\n}"
---
#!/usr/bin/env -S lis run

fn main() {
  let _ = 1
}
