tests/spec/format/snapshots/shebang_only.snap
---
source: tests/spec/format/mod.rs
description: "#!/usr/bin/env -S lis run"
---
#!/usr/bin/env -S lis run
