tests/spec/format/snapshots/shebang_with_imports.snap
---
source: tests/spec/format/mod.rs
description: "#!/usr/bin/env -S lis run\n\nimport \"go:fmt\"\n\nfn main() {\n  fmt.Println(1)\n}"
---
#!/usr/bin/env -S lis run

import "go:fmt"

fn main() {
  fmt.Println(1)
}
