tests/spec/format/snapshots/slice_nested.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { [[1, 2], [3, 4], [5, 6]] }"
---
fn test() {
  [[1, 2], [3, 4], [5, 6]]
}
